inwanted scrollbar fixed

--- a/signup.css
+++ b/signup.css
@@ -83,13 +83,9 @@ text-align: center;
 }
 .navbar{
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 1rem;
+    padding: 1rem 0;
     color: white;
-    /* width: 100%; */
+    width: 100%;
 
 }
 
